# hackathon-2025

./: .gitignore  README.md  pyproject.toml
example1/: __init__.py  chat_manager.py  main.py  screenshot_manager.py  ui.py
